// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component rendering applies props to the root svg 1`] = `
<div>
  <svg
    class="some-class"
    title="Some title"
  >
    <use
      href="sprite.svg#arrow"
    />
  </svg>
</div>
`;

exports[`Icon component rendering don't render any children 1`] = `
<div>
  <svg>
    <use
      href="sprite.svg#arrow"
    />
  </svg>
</div>
`;

exports[`Icon component rendering without children 1`] = `
<div>
  <svg>
    <use
      href="sprite.svg#arrow"
    />
  </svg>
</div>
`;
